y.output

state 0
	$accept: .ast $end 

	DEFAULT  shift 24
	UNIQUE  shift 25
	PRIMARYKEY  shift 26
	CHECK  shift 29
	FOREIGNKEY  shift 30
	REFERENCES  shift 28
	CONSTRAINT  shift 23
	CHAR  shift 9
	VARCHAR  shift 10
	BIT  shift 11
	BITVARYING  shift 12
	BOOLEAN  shift 13
	INT  shift 14
	INTEGER  shift 15
	SHORTINT  shift 16
	FLOAT  shift 17
	REAL  shift 18
	DOUBLEPRECISION  shift 19
	DECIMAL  shift 20
	NUMERIC  shift 21
	TIME  shift 22
	NOT  shift 27
	.  error

	ast  goto 1
	constraintAfterAttributeList  goto 2
	constraintAfterAttribute  goto 6
	constraintAfterAttributeWithName  goto 5
	constraintList  goto 3
	constraint  goto 8
	constraintWithName  goto 7
	domain  goto 4

state 1
	$accept:  ast.$end 

	$end  accept
	.  error


state 2
	ast:  constraintAfterAttributeList.    (1)
	constraintAfterAttributeList:  constraintAfterAttributeList.constraintAfterAttributeWithName 
	constraintAfterAttributeList:  constraintAfterAttributeList.constraintAfterAttribute 

	DEFAULT  shift 24
	UNIQUE  shift 34
	PRIMARYKEY  shift 35
	REFERENCES  shift 28
	CONSTRAINT  shift 33
	NOT  shift 27
	.  reduce 1 (src line 228)

	constraintAfterAttribute  goto 32
	constraintAfterAttributeWithName  goto 31

state 3
	ast:  constraintList.    (2)
	constraintList:  constraintList.COMMA constraintWithName 
	constraintList:  constraintList.COMMA constraint 

	COMMA  shift 36
	.  reduce 2 (src line 239)


state 4
	ast:  domain.    (3)

	.  reduce 3 (src line 249)


state 5
	constraintAfterAttributeList:  constraintAfterAttributeWithName.    (4)

	.  reduce 4 (src line 388)


state 6
	constraintAfterAttributeList:  constraintAfterAttribute.    (5)

	.  reduce 5 (src line 394)


state 7
	constraintList:  constraintWithName.    (8)

	.  reduce 8 (src line 410)


state 8
	constraintList:  constraint.    (9)

	.  reduce 9 (src line 416)


state 9
	domain:  CHAR.    (92)

	.  reduce 92 (src line 1334)


state 10
	domain:  VARCHAR.LPAREN INTVALUE RPAREN 

	LPAREN  shift 37
	.  error


state 11
	domain:  BIT.LPAREN INTVALUE RPAREN 

	LPAREN  shift 38
	.  error


state 12
	domain:  BITVARYING.LPAREN INTVALUE RPAREN 

	LPAREN  shift 39
	.  error


state 13
	domain:  BOOLEAN.    (96)

	.  reduce 96 (src line 1366)


state 14
	domain:  INT.    (97)

	.  reduce 97 (src line 1373)


state 15
	domain:  INTEGER.    (98)

	.  reduce 98 (src line 1380)


state 16
	domain:  SHORTINT.    (99)

	.  reduce 99 (src line 1387)


state 17
	domain:  FLOAT.    (100)

	.  reduce 100 (src line 1394)


state 18
	domain:  REAL.    (101)

	.  reduce 101 (src line 1401)


state 19
	domain:  DOUBLEPRECISION.    (102)

	.  reduce 102 (src line 1408)


state 20
	domain:  DECIMAL.LPAREN INTVALUE COMMA INTVALUE RPAREN 

	LPAREN  shift 40
	.  error


state 21
	domain:  NUMERIC.LPAREN INTVALUE COMMA INTVALUE RPAREN $$104 DATE 

	LPAREN  shift 41
	.  error


state 22
	domain:  TIME.    (106)

	.  reduce 106 (src line 1440)


state 23
	constraintWithName:  CONSTRAINT.ID constraint 
	constraintAfterAttributeWithName:  CONSTRAINT.ID constraintAfterAttribute 

	ID  shift 42
	.  error


state 24
	constraintAfterAttribute:  DEFAULT.elementaryValue 

	INTVALUE  shift 44
	FLOATVALUE  shift 45
	STRINGVALUE  shift 46
	BOOLVALUE  shift 47
	.  error

	elementaryValue  goto 43

state 25
	constraint:  UNIQUE.LPAREN attriNameList RPAREN 
	constraintAfterAttribute:  UNIQUE.    (34)

	LPAREN  shift 48
	.  reduce 34 (src line 700)


state 26
	constraint:  PRIMARYKEY.LPAREN attriNameList RPAREN 
	constraintAfterAttribute:  PRIMARYKEY.    (35)

	LPAREN  shift 49
	.  reduce 35 (src line 708)


state 27
	constraintAfterAttribute:  NOT.NULLMARK 

	NULLMARK  shift 50
	.  error


state 28
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN setDeferrable 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN onUpdateSet 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN onDeleteSet 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN setDeferrable onUpdateSet 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN setDeferrable onDeleteSet 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN onUpdateSet setDeferrable 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN onUpdateSet onDeleteSet 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN onDeleteSet setDeferrable 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN onDeleteSet onUpdateSet 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN setDeferrable onUpdateSet onDeleteSet 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN setDeferrable onDeleteSet onUpdateSet 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN onUpdateSet setDeferrable onDeleteSet 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN onUpdateSet onDeleteSet setDeferrable 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN onDeleteSet setDeferrable onUpdateSet 
	constraintAfterAttribute:  REFERENCES.ID LPAREN ID RPAREN onDeleteSet onUpdateSet setDeferrable 

	ID  shift 51
	.  error


state 29
	constraint:  CHECK.LPAREN condition RPAREN 

	LPAREN  shift 52
	.  error


state 30
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onUpdateSet 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onDeleteSet 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet setDeferrable 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet onDeleteSet 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet setDeferrable 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet onUpdateSet 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onUpdateSet onDeleteSet 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onDeleteSet onUpdateSet 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet setDeferrable onDeleteSet 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet onDeleteSet setDeferrable 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet setDeferrable onUpdateSet 
	constraint:  FOREIGNKEY.LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet onUpdateSet setDeferrable 

	LPAREN  shift 53
	.  error


state 31
	constraintAfterAttributeList:  constraintAfterAttributeList constraintAfterAttributeWithName.    (6)

	.  reduce 6 (src line 399)


state 32
	constraintAfterAttributeList:  constraintAfterAttributeList constraintAfterAttribute.    (7)

	.  reduce 7 (src line 403)


state 33
	constraintAfterAttributeWithName:  CONSTRAINT.ID constraintAfterAttribute 

	ID  shift 54
	.  error


state 34
	constraintAfterAttribute:  UNIQUE.    (34)

	.  reduce 34 (src line 700)


state 35
	constraintAfterAttribute:  PRIMARYKEY.    (35)

	.  reduce 35 (src line 708)


state 36
	constraintList:  constraintList COMMA.constraintWithName 
	constraintList:  constraintList COMMA.constraint 

	UNIQUE  shift 58
	PRIMARYKEY  shift 59
	CHECK  shift 29
	FOREIGNKEY  shift 30
	CONSTRAINT  shift 57
	.  error

	constraint  goto 56
	constraintWithName  goto 55

state 37
	domain:  VARCHAR LPAREN.INTVALUE RPAREN 

	INTVALUE  shift 60
	.  error


state 38
	domain:  BIT LPAREN.INTVALUE RPAREN 

	INTVALUE  shift 61
	.  error


state 39
	domain:  BITVARYING LPAREN.INTVALUE RPAREN 

	INTVALUE  shift 62
	.  error


state 40
	domain:  DECIMAL LPAREN.INTVALUE COMMA INTVALUE RPAREN 

	INTVALUE  shift 63
	.  error


state 41
	domain:  NUMERIC LPAREN.INTVALUE COMMA INTVALUE RPAREN $$104 DATE 

	INTVALUE  shift 64
	.  error


state 42
	constraintWithName:  CONSTRAINT ID.constraint 
	constraintAfterAttributeWithName:  CONSTRAINT ID.constraintAfterAttribute 

	DEFAULT  shift 24
	UNIQUE  shift 25
	PRIMARYKEY  shift 26
	CHECK  shift 29
	FOREIGNKEY  shift 30
	REFERENCES  shift 28
	NOT  shift 27
	.  error

	constraintAfterAttribute  goto 66
	constraint  goto 65

state 43
	constraintAfterAttribute:  DEFAULT elementaryValue.    (33)

	.  reduce 33 (src line 690)


state 44
	elementaryValue:  INTVALUE.    (110)

	.  reduce 110 (src line 1504)


state 45
	elementaryValue:  FLOATVALUE.    (111)

	.  reduce 111 (src line 1512)


state 46
	elementaryValue:  STRINGVALUE.    (112)

	.  reduce 112 (src line 1519)


state 47
	elementaryValue:  BOOLVALUE.    (113)

	.  reduce 113 (src line 1526)


state 48
	constraint:  UNIQUE LPAREN.attriNameList RPAREN 

	ID  shift 68
	.  error

	attriNameList  goto 67

state 49
	constraint:  PRIMARYKEY LPAREN.attriNameList RPAREN 

	ID  shift 68
	.  error

	attriNameList  goto 69

state 50
	constraintAfterAttribute:  NOT NULLMARK.    (36)

	.  reduce 36 (src line 716)


state 51
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN setDeferrable 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN setDeferrable onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN setDeferrable onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN onUpdateSet setDeferrable 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN onUpdateSet onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN onDeleteSet setDeferrable 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN onDeleteSet onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN setDeferrable onUpdateSet onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN setDeferrable onDeleteSet onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN onUpdateSet setDeferrable onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN onUpdateSet onDeleteSet setDeferrable 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN onDeleteSet setDeferrable onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID.LPAREN ID RPAREN onDeleteSet onUpdateSet setDeferrable 

	LPAREN  shift 70
	.  error


state 52
	constraint:  CHECK LPAREN.condition RPAREN 

	EXISTS  shift 76
	LPAREN  shift 73
	NOT  shift 75
	ID  shift 77
	.  error

	condition  goto 71
	predicate  goto 72
	attriNameOptionTableName  goto 74

state 53
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onUpdateSet 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onDeleteSet 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet setDeferrable 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet onDeleteSet 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet setDeferrable 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet onUpdateSet 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onUpdateSet onDeleteSet 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onDeleteSet onUpdateSet 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet setDeferrable onDeleteSet 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet onDeleteSet setDeferrable 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet setDeferrable onUpdateSet 
	constraint:  FOREIGNKEY LPAREN.ID RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet onUpdateSet setDeferrable 

	ID  shift 78
	.  error


state 54
	constraintAfterAttributeWithName:  CONSTRAINT ID.constraintAfterAttribute 

	DEFAULT  shift 24
	UNIQUE  shift 34
	PRIMARYKEY  shift 35
	REFERENCES  shift 28
	NOT  shift 27
	.  error

	constraintAfterAttribute  goto 66

state 55
	constraintList:  constraintList COMMA constraintWithName.    (10)

	.  reduce 10 (src line 421)


state 56
	constraintList:  constraintList COMMA constraint.    (11)

	.  reduce 11 (src line 425)


state 57
	constraintWithName:  CONSTRAINT.ID constraint 

	ID  shift 79
	.  error


state 58
	constraint:  UNIQUE.LPAREN attriNameList RPAREN 

	LPAREN  shift 48
	.  error


state 59
	constraint:  PRIMARYKEY.LPAREN attriNameList RPAREN 

	LPAREN  shift 49
	.  error


state 60
	domain:  VARCHAR LPAREN INTVALUE.RPAREN 

	RPAREN  shift 80
	.  error


state 61
	domain:  BIT LPAREN INTVALUE.RPAREN 

	RPAREN  shift 81
	.  error


state 62
	domain:  BITVARYING LPAREN INTVALUE.RPAREN 

	RPAREN  shift 82
	.  error


state 63
	domain:  DECIMAL LPAREN INTVALUE.COMMA INTVALUE RPAREN 

	COMMA  shift 83
	.  error


state 64
	domain:  NUMERIC LPAREN INTVALUE.COMMA INTVALUE RPAREN $$104 DATE 

	COMMA  shift 84
	.  error


state 65
	constraintWithName:  CONSTRAINT ID constraint.    (12)

	.  reduce 12 (src line 432)


state 66
	constraintAfterAttributeWithName:  CONSTRAINT ID constraintAfterAttribute.    (32)

	.  reduce 32 (src line 681)


state 67
	constraint:  UNIQUE LPAREN attriNameList.RPAREN 
	attriNameList:  attriNameList.COMMA ID 

	RPAREN  shift 85
	COMMA  shift 86
	.  error


state 68
	attriNameList:  ID.    (115)

	.  reduce 115 (src line 1554)


state 69
	constraint:  PRIMARYKEY LPAREN attriNameList.RPAREN 
	attriNameList:  attriNameList.COMMA ID 

	RPAREN  shift 87
	COMMA  shift 86
	.  error


state 70
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN setDeferrable 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN setDeferrable onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN setDeferrable onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN onUpdateSet setDeferrable 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN onUpdateSet onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN onDeleteSet setDeferrable 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN onDeleteSet onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN setDeferrable onUpdateSet onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN setDeferrable onDeleteSet onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN onUpdateSet setDeferrable onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN onUpdateSet onDeleteSet setDeferrable 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN onDeleteSet setDeferrable onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN.ID RPAREN onDeleteSet onUpdateSet setDeferrable 

	ID  shift 88
	.  error


state 71
	constraint:  CHECK LPAREN condition.RPAREN 
	condition:  condition.AND condition 
	condition:  condition.OR condition 

	AND  shift 90
	OR  shift 91
	RPAREN  shift 89
	.  error


state 72
	condition:  predicate.    (60)

	.  reduce 60 (src line 977)


state 73
	condition:  LPAREN.condition RPAREN 
	predicate:  LPAREN.attriNameOptionTableNameList RPAREN IN subQuery 
	predicate:  LPAREN.attriNameOptionTableNameList RPAREN NOT IN subQuery 
	predicate:  LPAREN.attriNameOptionTableNameList RPAREN IN ID 
	predicate:  LPAREN.attriNameOptionTableNameList RPAREN NOT IN ID 

	EXISTS  shift 76
	LPAREN  shift 73
	NOT  shift 75
	ID  shift 77
	.  error

	condition  goto 92
	predicate  goto 72
	attriNameOptionTableName  goto 94
	attriNameOptionTableNameList  goto 93

state 74
	predicate:  attriNameOptionTableName.compareMark elementaryValue 
	predicate:  attriNameOptionTableName.LIKE STRINGVALUE 
	predicate:  attriNameOptionTableName.IN subQuery 
	predicate:  attriNameOptionTableName.NOT IN subQuery 
	predicate:  attriNameOptionTableName.IN ID 
	predicate:  attriNameOptionTableName.NOT IN ID 
	predicate:  attriNameOptionTableName.compareMark ALL subQuery 
	predicate:  attriNameOptionTableName.compareMark ANY subQuery 
	predicate:  attriNameOptionTableName.compareMark ALL ID 
	predicate:  attriNameOptionTableName.compareMark ANY ID 
	predicate:  attriNameOptionTableName.IS NULLMARK 
	predicate:  attriNameOptionTableName.IS NOT NULLMARK 

	LIKE  shift 96
	IN  shift 97
	IS  shift 99
	NOTEQUAL  shift 101
	LESS  shift 102
	GREATER  shift 103
	LESSEQUAL  shift 104
	GREATEREQUAL  shift 105
	EQUAL  shift 100
	NOT  shift 98
	.  error

	compareMark  goto 95

state 75
	predicate:  NOT.attriNameOptionTableName compareMark ALL subQuery 
	predicate:  NOT.attriNameOptionTableName compareMark ANY subQuery 
	predicate:  NOT.attriNameOptionTableName compareMark ALL ID 
	predicate:  NOT.attriNameOptionTableName compareMark ANY ID 
	predicate:  NOT.EXISTS subQuery 

	EXISTS  shift 107
	ID  shift 77
	.  error

	attriNameOptionTableName  goto 106

state 76
	predicate:  EXISTS.subQuery 

	DOT  shift 109
	.  error

	subQuery  goto 108

state 77
	attriNameOptionTableName:  ID.    (107)
	attriNameOptionTableName:  ID.DOT ID 

	DOT  shift 110
	.  reduce 107 (src line 1458)


state 78
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onUpdateSet 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onDeleteSet 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet setDeferrable 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet onDeleteSet 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet setDeferrable 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet onUpdateSet 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onUpdateSet onDeleteSet 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN setDeferrable onDeleteSet onUpdateSet 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet setDeferrable onDeleteSet 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN onUpdateSet onDeleteSet setDeferrable 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet setDeferrable onUpdateSet 
	constraint:  FOREIGNKEY LPAREN ID.RPAREN REFERENCES ID LPAREN ID RPAREN onDeleteSet onUpdateSet setDeferrable 

	RPAREN  shift 111
	.  error


state 79
	constraintWithName:  CONSTRAINT ID.constraint 

	UNIQUE  shift 58
	PRIMARYKEY  shift 59
	CHECK  shift 29
	FOREIGNKEY  shift 30
	.  error

	constraint  goto 65

state 80
	domain:  VARCHAR LPAREN INTVALUE RPAREN.    (93)

	.  reduce 93 (src line 1342)


state 81
	domain:  BIT LPAREN INTVALUE RPAREN.    (94)

	.  reduce 94 (src line 1350)


state 82
	domain:  BITVARYING LPAREN INTVALUE RPAREN.    (95)

	.  reduce 95 (src line 1358)


state 83
	domain:  DECIMAL LPAREN INTVALUE COMMA.INTVALUE RPAREN 

	INTVALUE  shift 112
	.  error


state 84
	domain:  NUMERIC LPAREN INTVALUE COMMA.INTVALUE RPAREN $$104 DATE 

	INTVALUE  shift 113
	.  error


state 85
	constraint:  UNIQUE LPAREN attriNameList RPAREN.    (13)

	.  reduce 13 (src line 441)


state 86
	attriNameList:  attriNameList COMMA.ID 

	ID  shift 114
	.  error


state 87
	constraint:  PRIMARYKEY LPAREN attriNameList RPAREN.    (14)

	.  reduce 14 (src line 451)


state 88
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN setDeferrable 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN setDeferrable onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN setDeferrable onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN onUpdateSet setDeferrable 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN onUpdateSet onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN onDeleteSet setDeferrable 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN onDeleteSet onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN setDeferrable onUpdateSet onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN setDeferrable onDeleteSet onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN onUpdateSet setDeferrable onDeleteSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN onUpdateSet onDeleteSet setDeferrable 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN onDeleteSet setDeferrable onUpdateSet 
	constraintAfterAttribute:  REFERENCES ID LPAREN ID.RPAREN onDeleteSet onUpdateSet setDeferrable 

	RPAREN  shift 115
	.  error


state 89
	constraint:  CHECK LPAREN condition RPAREN.    (15)

	.  reduce 15 (src line 460)


state 90
	condition:  condition AND.condition 

	EXISTS  shift 76
	LPAREN  shift 73
	NOT  shift 75
	ID  shift 77
	.  error

	condition  goto 116
	predicate  goto 72
	attriNameOptionTableName  goto 74

state 91
	condition:  condition OR.condition 

	EXISTS  shift 76
	LPAREN  shift 73
	NOT  shift 75
	ID  shift 77
	.  error

	condition  goto 117
	predicate  goto 72
	attriNameOptionTableName  goto 74

state 92
	condition:  LPAREN condition.RPAREN 
	condition:  condition.AND condition 
	condition:  condition.OR condition 

	AND  shift 90
	OR  shift 91
	RPAREN  shift 118
	.  error


state 93
	predicate:  LPAREN attriNameOptionTableNameList.RPAREN IN subQuery 
	predicate:  LPAREN attriNameOptionTableNameList.RPAREN NOT IN subQuery 
	predicate:  LPAREN attriNameOptionTableNameList.RPAREN IN ID 
	predicate:  LPAREN attriNameOptionTableNameList.RPAREN NOT IN ID 
	attriNameOptionTableNameList:  attriNameOptionTableNameList.COMMA attriNameOptionTableName 

	RPAREN  shift 119
	COMMA  shift 120
	.  error


state 94
	predicate:  attriNameOptionTableName.compareMark elementaryValue 
	predicate:  attriNameOptionTableName.LIKE STRINGVALUE 
	predicate:  attriNameOptionTableName.IN subQuery 
	predicate:  attriNameOptionTableName.NOT IN subQuery 
	predicate:  attriNameOptionTableName.IN ID 
	predicate:  attriNameOptionTableName.NOT IN ID 
	predicate:  attriNameOptionTableName.compareMark ALL subQuery 
	predicate:  attriNameOptionTableName.compareMark ANY subQuery 
	predicate:  attriNameOptionTableName.compareMark ALL ID 
	predicate:  attriNameOptionTableName.compareMark ANY ID 
	predicate:  attriNameOptionTableName.IS NULLMARK 
	predicate:  attriNameOptionTableName.IS NOT NULLMARK 
	attriNameOptionTableNameList:  attriNameOptionTableName.    (117)

	LIKE  shift 96
	IN  shift 97
	IS  shift 99
	NOTEQUAL  shift 101
	LESS  shift 102
	GREATER  shift 103
	LESSEQUAL  shift 104
	GREATEREQUAL  shift 105
	EQUAL  shift 100
	NOT  shift 98
	.  reduce 117 (src line 1565)

	compareMark  goto 95

state 95
	predicate:  attriNameOptionTableName compareMark.elementaryValue 
	predicate:  attriNameOptionTableName compareMark.ALL subQuery 
	predicate:  attriNameOptionTableName compareMark.ANY subQuery 
	predicate:  attriNameOptionTableName compareMark.ALL ID 
	predicate:  attriNameOptionTableName compareMark.ANY ID 

	ALL  shift 122
	ANY  shift 123
	INTVALUE  shift 44
	FLOATVALUE  shift 45
	STRINGVALUE  shift 46
	BOOLVALUE  shift 47
	.  error

	elementaryValue  goto 121

state 96
	predicate:  attriNameOptionTableName LIKE.STRINGVALUE 

	STRINGVALUE  shift 124
	.  error


state 97
	predicate:  attriNameOptionTableName IN.subQuery 
	predicate:  attriNameOptionTableName IN.ID 

	DOT  shift 109
	ID  shift 126
	.  error

	subQuery  goto 125

state 98
	predicate:  attriNameOptionTableName NOT.IN subQuery 
	predicate:  attriNameOptionTableName NOT.IN ID 

	IN  shift 127
	.  error


state 99
	predicate:  attriNameOptionTableName IS.NULLMARK 
	predicate:  attriNameOptionTableName IS.NOT NULLMARK 

	NOT  shift 129
	NULLMARK  shift 128
	.  error


state 100
	compareMark:  EQUAL.    (86)

	.  reduce 86 (src line 1279)


state 101
	compareMark:  NOTEQUAL.    (87)

	.  reduce 87 (src line 1285)


state 102
	compareMark:  LESS.    (88)

	.  reduce 88 (src line 1290)


state 103
	compareMark:  GREATER.    (89)

	.  reduce 89 (src line 1295)


state 104
	compareMark:  LESSEQUAL.    (90)

	.  reduce 90 (src line 1300)


state 105
	compareMark:  GREATEREQUAL.    (91)

	.  reduce 91 (src line 1305)

